paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.compile.log
error[E0428]: the name `type_id` is defined multiple times
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:13:1
   |
 9 | fn type_id(_: fn(i32) -> i32) -> i32 {
   | ------------------------------------ previous definition of the value `type_id` here
...
13 | fn type_id(_: fn(i32, i32) -> i32) -> i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `type_id` redefined here
   |
   = note: `type_id` must be defined only once in the value namespace of this module

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:50:16
   |
50 |     if type_id(p2) != 2 {
   |        ------- ^^ incorrect number of function parameters
   |        |
   |        arguments to this function are incorrect
   |
   = note: expected fn pointer `fn(i32) -> _`
              found fn pointer `fn(i32, i32) -> _`
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:9:4
   |
 9 | fn type_id(_: fn(i32) -> i32) -> i32 {
   |    ^^^^^^^ -----------------

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:53:16
   |
53 |     if type_id(q2) != 2 {
   |        ------- ^^ incorrect number of function parameters
   |        |
   |        arguments to this function are incorrect
   |
   = note: expected fn pointer `fn(i32) -> _`
              found fn pointer `fn(i32, i32) -> _`
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:9:4
   |
 9 | fn type_id(_: fn(i32) -> i32) -> i32 {
   |    ^^^^^^^ -----------------

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:68:16
   |
68 |     if type_id(r2) != 2 {
   |        ------- ^^ incorrect number of function parameters
   |        |
   |        arguments to this function are incorrect
   |
   = note: expected fn pointer `fn(i32) -> _`
              found fn pointer `fn(i32, i32) -> _`
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_001/target.rs:9:4
   |
 9 | fn type_id(_: fn(i32) -> i32) -> i32 {
   |    ^^^^^^^ -----------------

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0428.
For more information about an error, try `rustc --explain E0308`.